theme.css
/* ... */
@media (hover: hover) {
  .search-input-container input[type="search"]:hover,
  input.document-search-input:hover,
  input[type="email"]:hover,
  input[type="number"]:hover,
  input[type="password"]:hover,
  input[type="search"]:hover,
  input[type="text"]:hover,
  textarea:hover,
  body:not(.is-grabbing) .tree-item-self.has-focus.is-being-renamed:hover > .tree-item-inner {
    background: var(--background-input);
    border-radius: var(--radius-s);
    box-shadow: 0 0 0 var(--input-border-width)
      var(--background-modifier-border-focus);
    color: var(--text-normal);
  }
}
textarea {
  padding: 1em;
}
.search-input-container input::placeholder,
input.document-search-input::placeholder,
input[type="email"]::placeholder,
input[type="number"]::placeholder,
input[type="password"]::placeholder,
input[type="search"]::placeholder,
input[type="text"]::placeholder,
textarea::placeholder {
  color: var(--theme-color-inputPlaceholder);
}
/* No matches state */
input.document-search-input.mod-no-match,
input.document-replace-input.mod-no-match {
  background-color: color-mix(
    in srgb,
    var(--background-input),
    var(--background-modifier-error) 50%
  );
}
/* #endregion */
/* #region   Selects – regular */
select,
.setting-item-control select .dropdown,
.workspace-drawer-active-tab-header {
  -webkit-appearance: none;
  appearance: none;
  border: none;
  box-shadow: var(--theme-shadow-control);
  background-color: var(--theme-color-controlBg);
  color: var(--theme-color-controlText);

  & > option {
    color: var(--theme-color-controlText);
  }
}
@media (hover: hover) {
  select:hover,
  .setting-item-control select:hover,
  .dropdown:hover {
    border: none;
    background-color: var(--theme-color-controlBgHover);
    color: var(--theme-color-controlTextHover);
  }
}
select:focus,
.dropdown:focus {
  box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
  outline: none;
}

/* #endregion */
/* #region   Selects – lightweight */
.search-results-info .dropdown {
  border: none;
  box-shadow: var(--theme-shadow-control);
  background-color: var(--theme-color-controlLowWeightBg);
}
@media (hover: hover) {
  .search-results-info .dropdown:hover {
    border: none;
    background: var(--theme-color-controlBgHover);
    color: var(--theme-color-controlTextHover);
  }
}
.search-results-info .dropdown:focus {
  box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
  outline: none;
}
/* #endregion */
/* #region.  Flair */
.flair {
    background-color: var(--flair-background);
    border-radius: var(--radius-s);
    color: var(--flair-color);
    font-size: var(--font-ui-smaller);
    letter-spacing: 0.05em;
    margin-inline-start: 0;
    line-height: 1;
    padding: 0.375em 0.75em;
    text-transform: uppercase;

}
/* #endregion */
/* #region   Multi-select container */
.multi-select-container,
.metadata-property .multi-select-container {
  padding: 0.25em;
}

/* #endregion */
/* #region   Toolbars */
.canvas-controls,
.graph-controls,
.graph-controls.is-close,
.workspace-split:not(.mod-root) .graph-controls.is-close,
.graph-controls:not(.is-close),
.canvas-card-menu,
.canvas-menu,
.canvas-submenu,
.advanced-tables-buttons {
  background: var(--theme-color-controlSetBg);
  border: none;
  padding: 0.25rem;
  gap: 0;
  box-shadow: var(--theme-shadow-input);
  border-radius: var(--radius-m);
  width: fit-content;
}
.canvas-control-item,
.graph-controls-button,
.canvas-card-menu .canvas-card-menu-button,
[data-type="advanced-tables-toolbar"]
  .nav-buttons-container
  .nav-action-button {
  --icon-size: var(--icon-s);
  --icon-stroke: var(--icon-s-stroke-width);
  border-radius: var(--clickable-icon-radius);
  color: var(--theme-color-control);
  opacity: var(--icon-opacity);
  background-color: transparent;
  border: none;
}

/* Active state */
.canvas-control-item.has-active-menu {
  opacity: var(--icon-opacity-hover);
  color: var(--theme-color-controlLightweightActive);
  background-color: var(--theme-color-interactiveActive);
}
@media (hover: hover) {
  .canvas-control-item.has-active-menu:hover {
    background-color: var(--background-modifier-hover);
    color: var(--theme-color-controlHover);
  }
  .canvas-control-item:hover,
  .graph-controls-button:not(.mod-close):hover,
  .canvas-card-menu .canvas-card-menu-button:hover,
  [data-type="advanced-tables-toolbar"]
    .nav-buttons-container
    .nav-action-button:hover {
    color: var(--theme-color-controlHover);
    background-color: var(--background-modifier-hover);
  }
}
.graph-controls .setting-item {
  padding: 0.5em 0;
  margin: 0;
}
/* #endregion */
/* #region   Query Builders */
.query-toolbar-menu .query-toolbar-section:not(:last-child) {
  border-bottom: none;
}
.bases-query-container .filter-row.mod-group,
.bases-query-container .filter-group .filter-group {
  background-color: transparent;
  border: none;
  padding: 0;
  margin-inline-start: 1em;
}

.base-toolbar-sort-item,
.bases-query-container .filter-row {
  background-color: var(--theme-color-queryComponentBg);
  display: flex;
  align-items: center;
  gap: 0.5em;
  border-radius: var(--radius-s);

  .combobox-button,
  .combobox-button.bases-sort-direction {
    background: transparent;
    border: none;
    border-radius: var(--button-radius);
    padding: 0 1em;
  }

  .filter-operator {
    border: none;
  }

  @media(hover: hover) {
    .combobox-button:hover {
      background-color: var(--theme-color-controlBgHover);
      color: var(--theme-color-controlHover);

      .combobox-button-icon {
        color: var(--theme-color-controlHover);
      }
    }
  }
}
/* ... */

